cell_modeling/modeling/jitfailure-dolfin_expression_77493fe708f3d9ea0172fafb3e329b03/error.log
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp: In member function ‘virtual void dolfin::dolfin_expression_77493fe708f3d9ea0172fafb3e329b03::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:28: error: ‘A’ was not declared in this scope
           values[0] = t*5*(A**2+B**2+C**2)/100;
                            ^
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:31: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = t*5*(A**2+B**2+C**2)/100;
                               ^
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:33: error: ‘B’ was not declared in this scope
           values[0] = t*5*(A**2+B**2+C**2)/100;
                                 ^
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:36: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = t*5*(A**2+B**2+C**2)/100;
                                    ^
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:38: error: ‘C’ was not declared in this scope
           values[0] = t*5*(A**2+B**2+C**2)/100;
                                      ^
/tmp/tmpm20e87ls/dolfin_expression_77493fe708f3d9ea0172fafb3e329b03.cpp:62:41: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = t*5*(A**2+B**2+C**2)/100;
                                         ^
